--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -206,7 +206,8 @@
 			}
 			
 			.articlePod {				
-				width:29%;
+				//max-width: 29%;
+    			//min-width: 25%;
 				display: inline-table; 
 				padding:1% 4% 1% 0%;
 				font-family: @benton-book;
